--- a/DeepakBansal019/game.html
+++ b/DeepakBansal019/game.html
@@ -8,7 +8,7 @@
 
 
 	<header>
-		<a href='login.html'>log out</a>
+		<a href='index.html'>log out</a>
 		<h2 id ="h2"></h2>
 		<h2 id ="h3"></h2>
 		
