--- a/DeepakBansal019/index.html
+++ b/DeepakBansal019/index.html
@@ -31,7 +31,7 @@
                               if( uname==res.userName && pass1==res.password )
                               {
                               	alert("successfully logged in");
-                              	  window.location.href="index.html?id="+res.userName;
+                              	  window.location.href="game.html?id="+res.userName;
                               }
                               else
                               {
