--- a/DeepakBansal019/signup.html
+++ b/DeepakBansal019/signup.html
@@ -58,7 +58,7 @@
                          	           
                                        alert("account has been created");
 
-                                       window.location.href="login.html";
+                                       window.location.href="index.html";
                                        
                                           }
                          }
